Fixing bugs in Avni to Bahmni form creation